# KaZa-Client

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/src/org/kaza/: LocalService.java
qml/: Configuration.qml  ForceInstall.qml  Homepage.qml  KazaSettings.qml  Main.qml
src/: KazaApplicationManager.cpp  KazaApplicationManager.h  databaseworker.cpp  databaseworker.h  dbquery.cpp  dbquery.h  kazabackend.cpp  kazabackend.h  kazanotificationchecker.cpp  kazanotificationchecker.h  kazaobject.cpp  kazaobject.h  knxobject.cpp  knxobject.h  kzhistory.cpp  kzhistory.h  kzobject.cpp  kzobject.h  kzport.cpp  kzport.h  main.cpp
